--- a/styles.css
+++ b/styles.css
@@ -1,163 +1,170 @@
+:root {
+  --text-color: #bdc6cf;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     "Palanquin", sans-serif;
-  font-size: 14px;
-  font-weight: 600;
+    font-size: 14px;
+    font-weight: 600;
 }
 
 ul {
-  margin: 0 0 3px;
+    margin: 0 0 3px;
 }
 
 a {
-  font-size: 15px;
-  font-weight: 600;
-  color: #07077b;
+    font-size: 15px;
+    font-weight: 600;
+    color: #36d4c7;
 }
 
 p {
-  margin-top: 3px;
-  margin-bottom: 5px;
-  font-size: 14px;
-  font-weight: 400;
+    margin-top: 3px;
+    margin-bottom: 5px;
+    font-size: 14px;
+    font-weight: 400;
 }
 
 span {
-  font-size: 14px;
-  font-weight: 400;
-  margin-top: 3px;
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 3px;
 }
 
 .container {
-  display: flex;
-  box-sizing: border-box;
-  max-width: 700px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: rgb(244, 234, 234);
+    display: flex;
+    box-sizing: border-box;
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #202125;
 }
 
 .sidebar {
-  box-sizing: border-box;
-  width: 45%;
-  background-color: #669999;
-  padding: 5px;
-  margin: 0;
+    box-sizing: border-box;
+    width: 45%;
+    background-color: #303135;
+    padding: 5px;
+    margin: 0;
 }
 
 .img-container {
-  background-image: url(./photo.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 240px;
-  height: 250px;
-  border-radius: 50%;
+    background-image: url(./photo.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 240px;
+    height: 250px;
+    border-radius: 50%;
 }
 
 img {
-  display: block;
-  margin: 15px auto;
-  width: 240px;
-  height: 240px;
-  border-radius: 50%;
+    display: block;
+    margin: 15px auto;
+    width: 240px;
+    height: 240px;
+    border-radius: 50%;
 }
 
 .sidebar__title {
-  display: flex;
-  background-color: #103f3f;
-  margin: 5px 5px;
-  padding: 5px 5px;
-  color: #fff;
-  font-size: 20px;
+    display: flex;
+    background-color: #515256;
+    margin: 5px 5px;
+    padding: 5px 5px;
+    color: #fff;
+    font-size: 20px;
 }
 
 .sidebar__list {
-  font-size: 14px;
-  font-weight: 400;
+    font-size: 14px;
+    font-weight: 400;
+   color: #f29766;
+}
+
+.sidebar__list li {
+    color: var(--text-color);
 }
 
 .sidebar__list-contacts {
-  list-style: none;
-  padding-left: 20px;
+    list-style: none;
+    padding-left: 20px;
 }
 
 .icon {
-  display: inline-block;
-  width: 1em;
-  height: 1em;
-  stroke-width: 0;
-  stroke: currentColor;
-  fill: currentColor;
-  margin-right: 5px;
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    stroke-width: 0;
+    stroke: currentColor;
+    fill: currentColor;
+    margin-right: 5px;
 }
 
 .sidebar__link {
-  text-decoration: none;
-  color: black;
+    color: #36d4c7;
 }
 
 /* summary section */
 
-.summary-containet {
-  box-sizing: border-box;
-  padding: 10px;
+.summary-container {
+    box-sizing: border-box;
+    padding: 10px;
+    color: var(--text-color);
 }
 
 .summary__title-container {
-  background-color: #336666;
-  color: #fff;
-  font-size: 14px;
-  font-weight: 400;
-  padding: 20px;
-  margin-bottom: 10px;
+    background-color: #575960;
+    color: var(--text-color);
+    font-size: 14px;
+    font-weight: 400;
+    padding: 20px;
+    margin-bottom: 10px;
 }
 
 .summary__title-name {
-  font-weight: 600;
-  font-size: 40px;
-  margin-bottom: 0;
+    font-weight: 600;
+    font-size: 40px;
+    margin-bottom: 0;
 }
 
 .summary__title-position {
-  font-weight: 400;
-  font-size: 14px;
-  margin-top: 3px;
-  list-style-type: none;
+    font-weight: 400;
+    font-size: 14px;
+    margin-top: 3px;
+    list-style-type: none;
 }
 
 .summary__title {
-  display: flex;
-  background-color: #103f3f;
-  padding: 5px 5px;
-  font-size: 20px;
-  color: #fff;
-  width: 80%;
-  padding: 5px;
-  margin-top: 0;
+    display: flex;
+    background-color: #515256;
+    padding: 5px 5px;
+    font-size: 20px;
+    color: #fff;
+    width: 80%;
+    margin-top: 0;
 }
 
 .summary__list {
-  font-size: 14px;
-  font-weight: 400;
+    font-size: 14px;
+    font-weight: 400;
 }
 
 .summary__title-company,
 b {
-  font-weight: 700;
-  font-size: 16px;
-  margin-top: 5px;
-  text-decoration: none;
-  color: black;
+    font-weight: 700;
+    font-size: 16px;
+    margin-top: 5px;
+    color: #36d4c7;
 }
 
 .summary__title-company {
-  list-style-type: none;
+    list-style-type: none;
 }
 
 .summary__date {
-  font-size: 14px;
-  font-weight: 400;
-  margin-top: 0;
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 0;
 }
